# rauta

./: CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md
.github/: dependabot.yml
agent-api/: Cargo.toml
agent-api/src/: lib.rs  query.rs  types.rs
agent-api/src/diagnostics/: engine.rs  rules.rs
common/src/: lib.rs
common/tests/: parser_contract_tests.rs
control/: Cargo.toml
control/benches/: hot_path.rs
control/src/: error.rs  lib.rs  main.rs
control/src/admin/: local_query.rs  mod.rs  server.rs
control/src/apis/gateway/: gateway_index.rs
control/src/proxy/: circuit_breaker.rs  forwarder.rs  health_checker.rs  listener_manager.rs  mod.rs  rate_limiter.rs  request_handler.rs  route_snapshot.rs  router.rs  tls.rs
control/tests/: integration_test.rs
control/tests/integration/: mod.rs
control/tests/integration/framework/: assertions.rs  cluster.rs  k8s.rs  metrics.rs  mod.rs  sniffer.rs
control/tests/integration/scenarios/: basic_routing.rs  endpointslice.rs  load_test.rs  mod.rs  tls_validation.rs
deploy/: rauta-daemonset-test.yaml  rauta-daemonset.yaml
deploy/grafana/: README.md  rauta-dashboard.json
docker/: Dockerfile.backend-multi  Dockerfile.prod  Dockerfile.simple  README.md  build.sh
docs/adr/: 003-ebpf-kernel-observability-for-ai-agents.md
eval/k8s/: Dockerfile  oracle-job.yaml
eval/oracle/: Cargo.toml
eval/oracle/src/: main.rs
mcp-server/: Cargo.toml
mcp-server/src/: handler.rs  lib.rs  tools.rs
rauta-cli/: Cargo.toml
rauta-cli/src/: main.rs  output.rs  remote_query.rs
