[package]
name = "agent-api"
version = "0.1.0"
edition = "2021"
description = "RAUTA agent API: types, query trait, and diagnostics engine"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
async-trait = "0.1"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
